--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@tailwindcss/aspect-ratio": "^0.4.2",
         "@tailwindcss/forms": "^0.4.0",
         "alpinejs": "^3.4.2",
         "autoprefixer": "10.4.5",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.4.6",
-        "tailwindcss": "^3.0.18"
+        "postcss": "^8.4.18",
+        "tailwindcss": "^3.2.1"
     },
     "dependencies": {
-        "daisyui": "^2.33.0"
+        "daisyui": "^2.33.0",
+        "flowbite": "^1.5.3",
+        "tw-elements": "^1.0.0-alpha12"
     }
 }
