--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "@fouita/slider": "^0.0.4",
         "@tailwindcss/aspect-ratio": "^0.4.2",
         "@tailwindcss/forms": "^0.4.0",
-        "alpinejs": "^3.4.2",
+        "alpinejs": "^3.10.5",
         "autoprefixer": "10.4.5",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
@@ -22,6 +22,7 @@
         "tailwindcss": "^3.2.1"
     },
     "dependencies": {
+        "@alpine-collective/toolkit": "^1.0.2",
         "daisyui": "^2.33.0",
         "flowbite": "^1.5.3",
         "tw-elements": "^1.0.0-alpha12"
